--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💼👩Curriculum Vitae 💼</title>
+    <title>💼Curriculum Vitae 💼</title>
     <style>
         * {
             margin: 0px;
@@ -160,7 +160,7 @@
                 <h4>Programming, Management, Teaching, Social Media Marketing</h4>
             </td>
         </tr>
-        <hr>
+
         <br>
         <!-- CAREER OBJECTIVE -->
         <tr>
@@ -173,7 +173,7 @@
                     strengths.</h4>
             </td>
         </tr>
-        <hr>
+ 
         <!-- HONOURS AND AWARDS -->
 
         <tr>
@@ -378,7 +378,7 @@
                 </ul>
             </td>
         </tr>
-        <hr>
+     
         <!-- SOFT SKILLS -->
         <tr>
             <td>
@@ -392,7 +392,7 @@
 
 
         <!-- ACADEMIC QUALIFICATIONS -->
-        <hr>
+    
         <tr>
             <td>
                 <h2>ACADEMIC QUALIFICATIONS</h2>
@@ -412,8 +412,7 @@
                 </h4>
             </td>
         </tr>
-
-        <hr>
+<br>
         <!-- INTEREST -->
 
         <tr>
@@ -424,7 +423,7 @@
                 <h4>Cooking, chit-chat with kids</h4>
             </td>
         </tr>
-        <hr>
+        <br>
         <!-- CERTIFICATION -->
         <tr>
             <td>
@@ -484,11 +483,11 @@
                 </ul>
             </td>
         </tr>
-        <hr>
+        <br>
 
 
         <!-- REFERENCE -->
-        <hr>
+        <br>
         <tr>
             <td>
                 <h2>REFERENCES</h2>
