--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
             border: 1px solid rgba(245, 222, 179, 0.623);
             background-color: rgba(245, 222, 179, 0.459);
         }
+        @media (max-height: 850px){
+            body{
+width: 100%;
+            }
+            table{
+                width: 100%;
+ 
+            }
+        }
     </style>
 </head>
 
@@ -73,10 +82,10 @@
         <tr>
             <td><img src="img/IMG_9372-1.png" alt=""></td>
             <td>
-                <h1>Oseafiana Mary Chinwe</h1>
+                <h1> Mary Chinwe Oseafiana</h1>
                 <h3>Resourceful graduate, a leader, a generalist of extensive knowledge in computer science with
 
-                    interest in programming, social media marketing and administrative management.</h3>
+                    interest in programming and administrative management.</h3>
             </td>
 
         </tr>
